# AlphaZero-proto

./: .gitignore  CMakeLists.txt  README.md  count_openings.py  graph.py  hist.py
MiniDNN/: MiniDNN.h
MiniDNN/Callback/: VerboseCallback.h
include/: common.h  config.h
src/: evaluate.cpp  helpers.cpp  main.cpp  mcts.cpp  neuralnet.cpp  replaybuffer.cpp  selfplay.cpp  tictactoe.cpp
